<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="5dp"
    tools:context=".Login">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/assetTracking"
            android:textColor="@color/darkblue" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:background="@color/laybackgroud"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">


        <EditText
            android:id="@+id/astusername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/backtext"
            android:hint="@string/username"

            android:paddingLeft="10dp"
            android:textColor="@color/darkblue"
            android:textColorHint="@color/darkblue" />

        <EditText
            android:id="@+id/astpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/astusername"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/backtext"
            android:drawableLeft="@drawable/pas"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/darkblue"
            android:textColorHint="@color/darkblue" />

        <Button
            android:id="@+id/astloginauth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/astpassword"
            android:layout_alignStart="@+id/astpassword"
            android:layout_below="@+id/astpassword"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/login" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GoTo next Page"
            android:id="@+id/button"
            android:layout_below="@+id/astloginauth"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</RelativeLayout>
